crates/parse/src/tests/snapshots/struct_fields_only.snap
---
source: crates/parse/src/tests.rs
assertion_line: 360
expression: "(test[1], ast, ast_string)"
---
- "\nstruct Foo {\n    let a: int\n    let b: float = 1.0\n}\n"
- Ok:
    nodes:
      - kind:
          Struct:
            name: "main::Foo"
            fields:
              - kind:
                  Let:
                    name: a
                    antn: Int32
                    init: ~
              - kind:
                  Let:
                    name: b
                    antn: Float
                    init:
                      kind:
                        Lit:
                          value:
                            Float: 1.0
                          ty: ~
            methods: []
- "(struct main::Foo '((let a:int32) (let b:float 1)) '())"

