crates/parse/src/tests/snapshots/struct_mix.snap
---
source: crates/parse/src/tests.rs
assertion_line: 359
expression: "(test[1], ast, ast_string)"
---
- "\nstruct Foo {\n    let a: int\n    let b: float = 1.0\n\n    fn c() -> int {\n        1\n    }\n    fn d() {}\n}\n"
- Ok:
    nodes:
      - kind:
          Struct:
            name: Foo
            fields:
              - kind:
                  Let:
                    name: a
                    antn: Int32
                    init: ~
              - kind:
                  Let:
                    name: b
                    antn: Float
                    init:
                      kind:
                        Lit:
                          value:
                            Float: 1.0
                          ty: ~
            methods:
              - kind:
                  Fn:
                    proto:
                      name: _Foo_c
                      args: []
                      ret_ty: Int32
                      is_extern: false
                      module: main
                    body:
                      kind:
                        Block:
                          list:
                            - kind:
                                Lit:
                                  value:
                                    UInt64: 1
                                  ty: ~
                          ty: ~
              - kind:
                  Fn:
                    proto:
                      name: _Foo_d
                      args: []
                      ret_ty: Void
                      is_extern: false
                      module: main
                    body:
                      kind:
                        Block:
                          list: []
                          ty: ~
- "(struct Foo '((let a:int32) (let b:float 1)) '((define (_Foo_c) '(1)) (define (_Foo_d) '()))))"

