crates/parse/src/tests/snapshots/struct_single_line_struct_with_field.snap
---
source: crates/parse/src/tests.rs
assertion_line: 394
expression: "(test[1], ast, ast_string)"
---
- "struct Foo { let x: int }"
- Ok:
    nodes:
      - kind:
          Struct:
            name: Foo
            fields:
              - kind:
                  Let:
                    name: x
                    antn: Int32
                    init: ~
            methods: []
- "(struct Foo '((let x:int32)) '())"

