crates/parse/src/tests/snapshots/struct_single_line_struct_with_method.snap
---
source: crates/parse/src/tests.rs
assertion_line: 360
expression: "(test[1], ast, ast_string)"
---
- "struct Foo { fn foo() {} }"
- Ok:
    nodes:
      - kind:
          Struct:
            name: Foo
            fields: []
            methods:
              - kind:
                  Fn:
                    proto:
                      name: _Foo_foo
                      args: []
                      ret_ty: Void
                      is_extern: false
                      module: main
                    body:
                      kind:
                        Block:
                          list: []
                          ty: ~
- "(struct Foo '() '((define (_Foo_foo) '()))))"

