crates/parse/src/tests/snapshots/unop_sub.snap
---
source: crates/parse/src/tests.rs
assertion_line: 272
expression: "(test[1], ast, ast_string)"
---
- 3 - -21
- Ok:
    nodes:
      - kind:
          BinOp:
            op: Sub
            lhs:
              kind:
                Lit:
                  value:
                    UInt64: 3
                  ty: ~
            rhs:
              kind:
                UnOp:
                  op: Sub
                  rhs:
                    kind:
                      Lit:
                        value:
                          UInt64: 21
                        ty: ~
                  ty: ~
            ty: ~
- (- 3 (- 21))

