crates/parse/src/tests/snapshots/unop_with_binop.snap
---
source: crates/parse/src/tests.rs
assertion_line: 272
expression: "(test[1], ast, ast_string)"
---
- "-a * 2"
- Ok:
    nodes:
      - kind:
          BinOp:
            op: Mul
            lhs:
              kind:
                UnOp:
                  op: Sub
                  rhs:
                    kind:
                      Ident:
                        name: a
                        ty: ~
                  ty: ~
            rhs:
              kind:
                Lit:
                  value:
                    UInt64: 2
                  ty: ~
            ty: ~
- (* (- a) 2)

